--- a/spring_project/src/main/webapp/WEB-INF/web.xml
+++ b/spring_project/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,8 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<!-- 인코딩 필터  -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -54,5 +56,20 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+	<!-- /. 인코딩 필터  -->
+	<!-- 시큐리티 필터 -->
+	   <filter>
+          <filter-name>springSecurityFilterChain</filter-name>
+          <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+      </filter>
+      <filter-mapping>
+            <filter-name>springSecurityFilterChain</filter-name>
+          <url-pattern>/*</url-pattern>
+      </filter-mapping>
+	  <context-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/spring/root-context.xml
+                        /WEB-INF/spring/security-context.xml
+            </param-value>
+      </context-param>
 </web-app>
