--- a/spring_project/src/main/webapp/WEB-INF/web.xml
+++ b/spring_project/src/main/webapp/WEB-INF/web.xml
@@ -57,7 +57,7 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<!-- /. 인코딩 필터  -->
-	<!-- 시큐리티 필터 -->
+	<!-- 시큐리티 필터 (순서 주의! 인코딩 필터 밑에 놓을 것.)-->
 	   <filter>
           <filter-name>springSecurityFilterChain</filter-name>
           <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
